# socketcan_adapter

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE_PLAN_AND_RESOLUTIONS.md  CMakeLists.txt  README.md  package.xml
.github/: build.yml
.github/workflows/: build.yml  pre-commit.yml
axiomatic_adapter/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
axiomatic_adapter/include/axiomatic_adapter/: axiomatic_adapter.hpp  axiomatic_fd_backend.hpp  axiomatic_frame_parser.hpp  axiomatic_protocol.hpp  axiomatic_socketcan_bridge.hpp  udp_client.hpp
axiomatic_adapter/src/: axiomatic_adapter.cpp  axiomatic_fd_backend.cpp  axiomatic_frame_parser.cpp  axiomatic_protocol.cpp  axiomatic_socketcan_bridge.cpp  axiomatic_socketcan_bridge_node.cpp  udp_client.cpp
axiomatic_adapter/test/: axiomatic_adapter_test.cpp  axiomatic_concurrent_io_test.cpp  axiomatic_frame_parser_test.cpp  axiomatic_send_wire_format_test.cpp  test_axiomatic_protocol.cpp  test_udp_client.cpp
include/socketcan_adapter/: can_frame.hpp  socketcan_adapter.hpp  socketcan_bridge_node.hpp  visibility_control.h
launch/: socketcan_bridge_launch.py
socketcan_adapter/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
socketcan_adapter/include/socketcan_adapter/: can_frame.hpp  i_can_backend.hpp  socketcan_adapter.hpp
socketcan_adapter/launch/: socketcan_bridge_launch.py
socketcan_adapter/src/: can_frame.cpp  socketcan_adapter.cpp
socketcan_adapter/test/: can_frame_test.cpp  socketcan_adapter_test.cpp
socketcan_adapter_ros/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
socketcan_adapter_ros/launch/: socketcan_bridge_launch.py
socketcan_adapter_ros/src/: socketcan_bridge.cpp  socketcan_bridge_node.cpp
src/: can_frame.cpp  socketcan_adapter.cpp  socketcan_bridge.cpp  socketcan_bridge_node.cpp
test/: can_frame_test.cpp  socketcan_adapter_test.cpp
