<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>axiomatic_adapter</name>
  <version>0.0.1</version>
  <description>An Adapter Library and socketcan bridge for Axiomatic eth-can interface</description>
  <maintainer email="engineering@polymathrobotics.com">Polymath Robotics</maintainer>
  <license>Apache-2.0</license>
  <author email="davidtarazi@icloud.com">David Tarazi</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>boost</depend>
  <depend>cli11</depend>
  <depend>polymath_corelib</depend>
  <depend>polymath_cpputils</depend>
  <depend>socketcan_adapter</depend>

  <test_depend>catch2</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
